# zent

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
.sisyphus/drafts/: agent-framework-design.md  langchain-architecture-analysis.md  smolagents-architecture-analysis.md
docs/: Agent开发框架核心能力整合.md  zent-framework-design-v2.md  zent-framework-design-v3.md  zent-framework-design-v4.md  zent-framework-design.md
docs/plans/: 2025-03-03-core-phase1.md  2025-03-04-v4-phase1.md
examples/: 01-basic-chat.py  02-tool-calling.py  03-code-agent.py  04-anthropic-model.py
src/zent/: __init__.py
src/zent/agents/: __init__.py  code.py  tool_calling.py
src/zent/app/: __init__.py  factory.py
src/zent/core/: __init__.py  agent.py  memory.py  messages.py  model.py  steps.py  tool.py  types.py
src/zent/integrations/: __init__.py
src/zent/integrations/memory/: __init__.py
src/zent/integrations/models/: __init__.py  anthropic.py  openai.py
src/zent/integrations/tools/: __init__.py  mcp.py
tests/: __init__.py  conftest.py
tests/unit/agents/: test_code.py  test_tool_calling.py
tests/unit/core/: test_agent.py  test_memory.py  test_messages.py  test_steps.py  test_tool.py
tests/unit/integrations/: test_memory.py
